--- a/1305-AUS-WGS.Rmd
+++ b/1305-AUS-WGS.Rmd
@@ -86,7 +86,7 @@ pc12<-ggplot(covs) +
   ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
   theme_bw() +
   theme(panel.grid=element_blank()) +
-  scale_fill_viridis_d(option="H") +
+  scale_fill_viridis_d(option="C") +
   ggtitle("PCs 1 and 2") +
   theme(plot.title = element_text(hjust=0.5, face="bold")) +
   theme(legend.position = "none")
@@ -175,6 +175,8 @@ plot(x, option = "scores", pop = factor(m$Region, levels=c("Western Australia","
 ```
 
 
+
+
 Get scree plot and PCA    
 ```{r}
 pcadata<-x$scores[,1:5] %>% as_tibble()
@@ -187,7 +189,7 @@ ggplot(pcadata) +
   geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
   #geom_text_repel(data=pcadata %>% filter(Region %in% c("Cambodia")), aes(x=V1, y=V2,label=Run)) +
   scale_shape_manual(values=c(21,23,23,24,22)) + 
-  scale_fill_viridis_d(option="H") +
+  scale_fill_viridis_d(option="C") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
   theme(legend.position = "none") +
@@ -199,14 +201,15 @@ ggplot(pcadata) +
   geom_point(aes(x=V1, y=V4, shape=Lineage, fill=Region), alpha=0.95) +
  # geom_text_repel(data=pcadata %>% filter(Region %in% c("Queensland")), aes(x=V1, y=V4,label=Run)) +
   scale_shape_manual(values=c(21,23,23,24,22)) + 
-  scale_fill_viridis_d(option="H") +
+  scale_fill_viridis_d(option="C") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
   theme(legend.position = "none") +
   theme(panel.grid = element_blank()) +
   xlab("PC 1") +
-  ylab("PC 2") 
+  ylab("PC 4") 
 ```
+
 
 ```{r}
 labels12<-pcadata %>% select(Locality,V1, V2) %>% group_by(Locality) %>% summarize(x=mean(V1), y=mean(V2)) 
@@ -216,7 +219,7 @@ pcb<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Region), alpha=0.95) +
   geom_text_repel(data=labels12, aes(x=x, y=y, label=Locality)) +
   scale_shape_manual(values=c(21,23,23,24,22)) + 
-  scale_fill_viridis_d(option="H") +
+  scale_fill_viridis_d(option="C") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
   theme(legend.position = "none") +
@@ -232,7 +235,7 @@ pcc<-ggplot(pcadata) +
   geom_point(aes(x=V1, y=V3, shape=Lineage, fill=Region), alpha=0.9) +
   geom_text_repel(data=labels13, aes(x=x, y=y, label=Locality))+
   scale_shape_manual(values=c(21,23,23,24,22)) + 
-  scale_fill_viridis_d(option="H") +
+  scale_fill_viridis_d(option="C") +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   theme_bw() +
   theme(panel.grid = element_blank()) +
@@ -255,7 +258,7 @@ pcd<-ggplot(pcadata) +
   theme(panel.grid = element_blank()) +
   xlab("PC 1") +
   ylab("PC 4") +
-  ggtitle("D") +
+  ggtitle("C") +
   theme(plot.title = element_text(size=14, face="bold")) 
 ```
 
@@ -273,6 +276,29 @@ ggarrange(a,bc, ncol=1, heights=c(1,1))
 ggsave("outputs/1305/called-snp-pcas.pdf", width=12, height=10)
 ```
 
+
+```{r}
+Region<-pcadata %>% select(Region,V1, V2) %>% group_by(Region) %>% summarize(x=mean(V1), y=mean(V2)) 
+Locality<-pcadata %>% select(Locality,V1, V2) %>% group_by(Locality) %>% summarize(x=mean(V1), y=mean(V2)) 
+pvar <- x$singular.values^2
+
+ggplot(pcadata) +
+  geom_point(aes(x=V1, y=V2, shape=Lineage, fill=Locality), alpha=0.8, size=4) +
+  geom_text_repel(data=Region, aes(x=x, y=y, label=Region), face="bold", size=8) +
+  geom_text_repel(data=Locality, aes(x=x, y=y, label=Locality)) +
+  scale_shape_manual(values=c(21,23,23,24,22)) + 
+  scale_fill_viridis_d(option="C") +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  theme_bw() +
+  theme(legend.position = "none") +
+  theme(panel.grid = element_blank()) +
+  xlab(paste0("PC1 ",round(pvar[1]*100,2), "%" )) +
+  ylab(paste0("PC2 ",round(pvar[2]*100,2), "%" )) +
+  ggtitle("Genome-Wide PCA of Australasian Fish") +
+  theme(plot.title = element_text(size=14, face="bold", hjust=0.5)) 
+
+ggsave("outputs/1305/genome-wide-pcs12.pdf", width=8, height=6)
+```
 
 ## Divergent SNPS?
 
