--- a/1307-fitzroyqld.Rmd
+++ b/1307-fitzroyqld.Rmd
@@ -27,3 +27,5 @@ for ((i=10; i<=12; i++)); do echo "$i"; cat AGRF_NXGSQCAGRF25070193-1_23537LLT3/
 
 bash ../../doAlign-zipped.sh to-align.txt /home/maccamp/lates-wgs/genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna.gz
 
+Need to downsample...
+
