--- a/1308-pilbara.Rmd
+++ b/1308-pilbara.Rmd
@@ -53,7 +53,7 @@ m68<-m128 %>% filter(Source=="New")
 m68 %>% select(Path) %>% write_tsv("bamlists/68.bamlist", col_names = FALSE)
 m68 %>% select(Run) %>% write_tsv("bamlists/68.names", col_names = FALSE)
 
-meta<-m128
+meta<-m68
 ```
 
 
@@ -93,7 +93,7 @@ srun -p high -t 5:00:00 --mem=32G --nodes=1 --cpus-per-task=12  $HOME/angsd/angs
 
 
 ```{r}
-m <- as.matrix(read.table("outputs/1308/ibs-90-Lcal01.covMat"))
+m <- as.matrix(read.table("outputs/1308/68-ibs-90-Lcal01.covMat"))
 eig <- eigen(m)
 var<-eig$values/sum(eig$values)
 cumvar<-cumsum(eig$values)/sum(eig$values)
@@ -113,12 +113,12 @@ scree<-ggplot(vdf) +
   theme(plot.title = element_text(hjust=0.5, face="bold"))
 
 scree
-ggsave("outputs/1309/chrom01-scree-plot.jpeg")
+ggsave("outputs/1308/chrom01-scree-plot.jpeg")
 ```
 
 
 ```{r}
-covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(meta)
+covs<-eig$vectors[,1:4] %>% as_tibble() %>% bind_cols(meta)
 
 text12<-covs %>% select(Run, Region, V1, V2) %>%
   group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
@@ -130,7 +130,7 @@ pc12<-ggplot(covs) +
   geom_point(aes(x=V1, y=V2, fill=Locality), pch=21, alpha=0.75, cex=2) +
   #  geom_text(aes(x=V1, y=V2, label=Run), pch=21, alpha=0.75, cex=2) +
   geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
-  geom_text_repel(data=text12L, aes(x=x, y=y, label=Locality), size=3, max.overlaps = Inf) +
+#  geom_text_repel(data=text12L, aes(x=x, y=y, label=Locality), size=3, max.overlaps = Inf) +
   xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
   ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
   theme_bw() +
@@ -143,5 +143,37 @@ pc12<-ggplot(covs) +
 pc12
 ggsave("outputs/1308/chrom01-lates-pc12.jpeg", width=6, height=6)
 ggsave("outputs/1308/chrom01-lates-pc12.pdf", width=6, height=6)
+
+```
+
+```{r}
+text13<-covs %>% select(Run, Region, V1, V3) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V3))
+
+pc13<-ggplot(covs) +
+  geom_point(aes(x=V1, y=V3, fill=Locality), pch=21, alpha=0.75, cex=2) +
+  #  geom_text(aes(x=V1, y=V2, label=Run), pch=21, alpha=0.75, cex=2) +
+  geom_text_repel(data=text13, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+#  geom_text_repel(data=text12L, aes(x=x, y=y, label=Locality), size=3, max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC3", " ", round((100*var[3]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="C") +
+  ggtitle("PCs 1 and 3") +
+  theme(plot.title = element_text(hjust=0.5, face="bold")) +
+  theme(legend.position = "none")
+
+pc13
+```
+
+
+```{r}
+covs %>% filter(Lineage=="AUS") %>% ggplot() +
+  geom_point(aes(x=V1, y=V2, fill=Locality), pch=21)
+
+covs %>% filter(Lineage=="AUS") %>% ggplot() +
+  geom_point(aes(x=V1, y=V3, fill=Locality), pch=21) +
+  scale_fill_viridis_d(option="H")
 
 ```
